# simple-etl-airflow

./: Makefile  README.md  docker-compose.yml  pyproject.toml
config/: airflow.cfg
dags/: create_tables_with_insert_and_left_join.py  etl_pipeline.py  simple_etl_pipeline.py
data/html_data/: response.html
data/json_data/: transformed_data.json
data/raw_data/: sample_data.csv
docker/: Dockerfile
