[project]
name = "simple-etl"
version = "0.1.0"
description = "Simple ETL using Airflow"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apache-airflow>=2.10.4",
    "fake-useragent>=2.0.3",
    "pandas>=2.2.3",
    "requests>=2.31.0",
    "sqlalchemy>=1.4.54",
]

[tool.setuptools]
packages = ["dags"]
include-package-data = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
